--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -5,7 +5,7 @@
     }
 }
 
-.home-container-mobile {
+.images-container-mobile {
     width: 100vw;
     display: flex;
     flex-direction: column;
